@@ -13,14 +13,14 @@
 		<targetServicePackage>com.dili.uap.service</targetServicePackage>
 		<targetControllerPackage>com.dili.uap.controller</targetControllerPackage>
 		<drools.version>7.28.0.Final</drools.version>
-		<java.version>1.8</java.version>
+		<java.version>13</java.version>
 	</properties>
 
 	<!-- 父工程定义 -->
 	<parent>
 		<artifactId>dili-uap</artifactId>
 		<groupId>com.dili</groupId>
-		<version>2.8.2-SNAPSHOT</version>
+		<version>2.8.3-SNAPSHOT</version>
 	</parent>
 
 	<build>
@@ -66,17 +66,17 @@
 				<version>3.8.1</version>
 				<!-- 编译JDK版本 -->
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>13</source>
+					<target>13</target>
 					<encoding>UTF-8</encoding>
 					<parameters>true</parameters>
-					<!-- <compilerArgs> -->
-					<!-- <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg> -->
-					<!-- <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg> -->
-					<!-- <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg> -->
-					<!-- <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg> -->
-					<!-- <arg>&#45;&#45;add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg> -->
-					<!-- </compilerArgs> -->
+					 <compilerArgs>
+					 <arg>--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+					 <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+					 <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+					 <arg>--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+					 <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+					 </compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -132,12 +132,6 @@
 			<version>4.1</version>
 		</dependency>
 
-		<!-- 利刃框架引入 -->
-		<!-- <dependency> -->
-		<!-- <groupId>com.dili</groupId> -->
-		<!-- <artifactId>ss-scheduler</artifactId> -->
-		<!-- <version>${sharp-sword.version}</version> -->
-		<!-- </dependency> -->
 		<dependency>
 			<groupId>com.dili</groupId>
 			<artifactId>ss-oplog</artifactId>
@@ -174,36 +168,8 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
+			<version>2.2.4.RELEASE</version>
 		</dependency>
-
-		<!-- actuator -->
-		<!--<dependency> -->
-		<!--<groupId>org.springframework.boot</groupId> -->
-		<!--<artifactId>spring-boot-starter-actuator</artifactId> -->
-		<!--</dependency> -->
-		<!-- admin server依赖 st -->
-		<!--<dependency> -->
-		<!--<groupId>de.codecentric</groupId> -->
-		<!--<artifactId>spring-boot-admin-starter-client</artifactId> -->
-		<!--<version>2.0.1</version> -->
-		<!--</dependency> -->
-		<!--<dependency> -->
-		<!--<groupId>org.jolokia</groupId> -->
-		<!--<artifactId>jolokia-core</artifactId> -->
-		<!--&lt;!&ndash;<version>1.5.0</version>&ndash;&gt; -->
-		<!--</dependency> -->
-
-		<!--<dependency> -->
-		<!--<groupId>org.springframework.boot</groupId> -->
-		<!--<artifactId>spring-boot-starter-actuator</artifactId> -->
-		<!--</dependency> -->
-		<!-- admin server依赖 end -->
-		<!-- 解决Beetl模板热更新 -->
-		<!--<dependency> -->
-		<!--<groupId>org.springframework.boot</groupId> -->
-		<!--<artifactId>spring-boot-devtools</artifactId> -->
-		<!--<optional>true</optional> &lt;!&ndash;optional=true表示不传递依赖&ndash;&gt; -->
-		<!--</dependency> -->
 
 		<!-- 内部包 -->
 		<dependency>
@@ -261,46 +227,13 @@
 			<artifactId>sentinel-datasource-nacos</artifactId>
 			<version>1.7.1</version>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>com.alibaba.csp</groupId>-->
-<!--			<artifactId>sentinel-datasource-extension</artifactId>-->
-<!--			<version>1.7.2</version>-->
-<!--		</dependency>-->
 		<!-- 公共信息 -->
 		<dependency>
 			<groupId>com.dili</groupId>
 			<artifactId>commons-web</artifactId>
-			<version>1.3.1-SNAPSHOT</version>
+			<version>1.3.2-SNAPSHOT</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.jeasy/easy-rules-core -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.jeasy</groupId> -->
-		<!-- <artifactId>easy-rules-core</artifactId> -->
-		<!-- <version>3.3.0</version> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.jeasy</groupId> -->
-		<!-- <artifactId>easy-rules-support</artifactId> -->
-		<!-- <version>3.3.0</version> -->
-		<!-- </dependency> -->
-
-		<!-- <dependency> -->
-		<!-- <groupId>org.jeasy</groupId> -->
-		<!-- <artifactId>easy-rules-mvel</artifactId> -->
-		<!-- <version>3.3.0</version> -->
-		<!-- </dependency> -->
-
-		<!-- <dependency> -->
-		<!-- <groupId>org.kie</groupId> -->
-		<!-- <artifactId>kie-spring</artifactId> -->
-		<!-- <version>${drools.version}</version> -->
-		<!-- </dependency> -->
-		<!-- <dependency> -->
-		<!-- <groupId>org.drools</groupId> -->
-		<!-- <artifactId>drools-compiler</artifactId> -->
-		<!-- <version>${drools.version}</version> -->
-		<!-- </dependency> -->
 	</dependencies>
 
 
